Add bean transformers and add transformer exception capturing and propagation.